C2: extraction des constant dans un fichier à part

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --background-color: lightgrey;
+}
+
 body {
     display: flex;
     justify-content: center;
@@ -5,7 +9,7 @@ body {
     height: 100vh;
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: white;
+    background-color: var(--background-color);
 }
 
 #container {
