--- a/style.css
+++ b/style.css
@@ -17,6 +17,8 @@ body {
     padding: 20px;
     border: 2px solid black;
     background-color: lightgrey;
+    width: 300px;
+    height: 200px;
 }
 
 button {
